--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
         <link href="css/styles.css" rel="stylesheet">
     </head>
     <body>
-        <button class="button-open">Popup-1</button>
-        <button class="button-open">Popup-2</button>
-        <button class="button-open">Popup-3</button>
+        <div class="button-container">
+            <button class="button-open">Popup-1</button>
+            <button class="button-open">Popup-2</button>
+            <button class="button-open">Popup-3</button>
+        </div>
 
         <script src="js/scripts.js"></script>
     </body>
